--- a/appoinment.html
+++ b/appoinment.html
@@ -138,7 +138,9 @@
 
       async function fetchAppointments() {
         try {
-          const response = await fetch("https://script.google.com/macros/s/AKfycbwXVOV3mNmsEytRQQ1P4TY9JlCAFY2RaMUypcQAqKvoRxg3qMiqi63ZkJRKBQJOvji7KQ/exec");
+          const response = await fetch(
+            "https://script.google.com/macros/s/AKfycbwXVOV3mNmsEytRQQ1P4TY9JlCAFY2RaMUypcQAqKvoRxg3qMiqi63ZkJRKBQJOvji7KQ/exec"
+          );
           const data = await response.json();
 
           console.log(data);
@@ -151,6 +153,35 @@
           console.error("Fetch error:", error);
         }
       }
+      function displayAppointments(appointments) {
+        const container = document.getElementById("appointments-container");
+        container.innerHTML = ""; // Clear previous content
+
+        if (appointments.length === 0) {
+          container.innerHTML = "<p>No appointments found.</p>";
+          return;
+        }
+
+        appointments.forEach((appointment) => {
+          const div = document.createElement("div");
+          div.classList.add("appointment");
+          div.innerHTML = `
+      <p><strong>ID:</strong> ${appointment.id}</p>
+      <p><strong>Name:</strong> ${appointment.name}</p>
+      <p><strong>Phone:</strong> ${appointment.phone}</p>
+      <p><strong>Date:</strong> ${appointment.date}</p>
+      <p><strong>Time:</strong> ${appointment.time}</p>
+      <p><strong>Status:</strong> ${appointment.status}</p>
+      <p><strong>People:</strong> ${appointment.people}</p>
+      <p><strong>Payment:</strong> ${appointment.payment}</p>
+      <hr>
+    `;
+          container.appendChild(div);
+        });
+      }
+
+      // Call the function when the page loads
+      window.onload = fetchAppointments;
     </script>
   </body>
 </html>
